gloo-mesh/gm2.1/workshop/network/default-peer-authentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "bookinfo-backends"
spec:
  mtls:
    mode: STRICT
